--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.2",
     "morgan": "~1.9.1",
+    "node-localstorage": "^3.0.5",
     "npm": "^9.4.1"
   }
 }
